Mesh Boolean node crash when operation is keyframed #110562

Closed
opened 2023-07-28 10:39:21 +02:00 by Raimund Klink · 9 comments
Contributor

System Information
Operating system: Windows-11-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67

Blender Version
Broken: version: 3.6.1, 4.0.0 Alpha, branch: main, commit date: 2023-07-28 00:04, hash: 9a37a206cf5c
Worked: didn't test

Mesh Boolean node crash when operation is keyframed

Exact steps for others to reproduce the error

  • add a geometry nodes modifier to the default cube
  • insert a Mesh Boolean node
  • keyframe its current operation (Difference)
  • change the operation to Union
  • scrub the timeline > crash

Original report
Open the .blend and go to frame 60. Crash

Exact steps for others to reproduce the error
This is a .blend from a random user. So, sadly, I don't know the exact steps to reproduce.
It just said: "Code marked as unreachable has been executed. Please report this as a bug."

**System Information** Operating system: Windows-11-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.67 **Blender Version** Broken: version: 3.6.1, 4.0.0 Alpha, branch: main, commit date: 2023-07-28 00:04, hash: `9a37a206cf5c` Worked: didn't test Mesh Boolean node crash when operation is keyframed **Exact steps for others to reproduce the error** - add a geometry nodes modifier to the default cube - insert a Mesh Boolean node - keyframe its current operation (`Difference`) - change the operation to `Union` - scrub the timeline > crash **Original report** Open the .blend and go to frame 60. Crash **Exact steps for others to reproduce the error** This is a .blend from a random user. So, sadly, I don't know the exact steps to reproduce. It just said: "Code marked as unreachable has been executed. Please report this as a bug."
Raimund Klink added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-28 10:39:22 +02:00
Author
Contributor

Apologies for the low quality report.

Apologies for the low quality report.

Hi, can you attach C:\Users\RAIMUN~1.KLI\AppData\Local\Temp\untitled.crash.txt too?

Hi, can you attach `C:\Users\RAIMUN~1.KLI\AppData\Local\Temp\untitled.crash.txt` too?
Member

Can redo the crash in current master:

Stack trace:
blender.exe         :0x00007FF6B0449900  blender::ImplicitSharingPtr<blender::bke::GeometryComponent>::ImplicitSharingPtr<blender::bke::Geom
blender.exe         :0x00007FF6B49E41FC  `eh vector copy constructor iterator'
blender.exe         :0x00007FF6B0449980  blender::bke::GeometrySet::GeometrySet
blender.exe         :0x00007FF6B0DE0E50  blender::nodes::node_geo_boolean_cc::node_geo_exec
blender.exe         :0x00007FF6B0A6B150  blender::nodes::LazyFunctionForGeometryNode::execute_impl
blender.exe         :0x00007FF6B40535D0  blender::fn::lazy_function::Executor::run_node_task
blender.exe         :0x00007FF6B4051B00  blender::fn::lazy_function::Executor::execute
blender.exe         :0x00007FF6B0A840D0  blender::nodes::execute_geometry_nodes_on_geometry
blender.exe         :0x00007FF6B09F31A0  blender::modifyGeometry
blender.exe         :0x00007FF6B0658A30  mesh_calc_modifiers
blender.exe         :0x00007FF6B0658820  mesh_build_data
blender.exe         :0x00007FF6B065AE40  makeDerivedMesh
blender.exe         :0x00007FF6B0617620  BKE_object_handle_data_update
blender.exe         :0x00007FF6B0617450  BKE_object_eval_uber_data
blender.exe         :0x00007FF6B089CCD0  blender::deg::`anonymous namespace'::evaluate_node
blender.exe         :0x00007FF6B089CB00  blender::deg::`anonymous namespace'::deg_task_run_func
blender.exe         :0x00007FF6B072F880  tbb::internal::function_task<Task>::execute
tbb.dll             :0x00007FFEA66FF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFEA66FF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFEA66F4FD0  tbb::interface7::internal::isolate_within_arena
tbb.dll             :0x00007FFEA66FA120  tbb::task_scheduler_init::terminate
tbb.dll             :0x00007FFEA66FD800  tbb::thread_bound_filter::try_process_item
tbb.dll             :0x00007FFEA66FD800  tbb::thread_bound_filter::try_process_item
ucrtbase.dll        :0x00007FFED7CB6BB0  recalloc
KERNEL32.DLL        :0x00007FFED8EA5580  BaseThreadInitThunk
ntdll.dll           :0x00007FFEDA644830  RtlUserThreadStart
Can redo the crash in current master: ``` Stack trace: blender.exe :0x00007FF6B0449900 blender::ImplicitSharingPtr<blender::bke::GeometryComponent>::ImplicitSharingPtr<blender::bke::Geom blender.exe :0x00007FF6B49E41FC `eh vector copy constructor iterator' blender.exe :0x00007FF6B0449980 blender::bke::GeometrySet::GeometrySet blender.exe :0x00007FF6B0DE0E50 blender::nodes::node_geo_boolean_cc::node_geo_exec blender.exe :0x00007FF6B0A6B150 blender::nodes::LazyFunctionForGeometryNode::execute_impl blender.exe :0x00007FF6B40535D0 blender::fn::lazy_function::Executor::run_node_task blender.exe :0x00007FF6B4051B00 blender::fn::lazy_function::Executor::execute blender.exe :0x00007FF6B0A840D0 blender::nodes::execute_geometry_nodes_on_geometry blender.exe :0x00007FF6B09F31A0 blender::modifyGeometry blender.exe :0x00007FF6B0658A30 mesh_calc_modifiers blender.exe :0x00007FF6B0658820 mesh_build_data blender.exe :0x00007FF6B065AE40 makeDerivedMesh blender.exe :0x00007FF6B0617620 BKE_object_handle_data_update blender.exe :0x00007FF6B0617450 BKE_object_eval_uber_data blender.exe :0x00007FF6B089CCD0 blender::deg::`anonymous namespace'::evaluate_node blender.exe :0x00007FF6B089CB00 blender::deg::`anonymous namespace'::deg_task_run_func blender.exe :0x00007FF6B072F880 tbb::internal::function_task<Task>::execute tbb.dll :0x00007FFEA66FF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFEA66FF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFEA66F4FD0 tbb::interface7::internal::isolate_within_arena tbb.dll :0x00007FFEA66FA120 tbb::task_scheduler_init::terminate tbb.dll :0x00007FFEA66FD800 tbb::thread_bound_filter::try_process_item tbb.dll :0x00007FFEA66FD800 tbb::thread_bound_filter::try_process_item ucrtbase.dll :0x00007FFED7CB6BB0 recalloc KERNEL32.DLL :0x00007FFED8EA5580 BaseThreadInitThunk ntdll.dll :0x00007FFEDA644830 RtlUserThreadStart ```
Author
Contributor
No description provided.
Author
Contributor

Still crashing with latest master

Still crashing with latest master
Raimund Klink changed title from Blender Crash. Code marked as unreachable has been executed. to Crash: Code marked as unreachable has been executed. 2024-02-07 12:10:33 +01:00
Member

Seem to be caused by the Mesh Boolean node operation being animated

image

If I remove the animation, I dont get it to crash

Seem to be caused by the `Mesh Boolean` node `operation` being animated ![image](/attachments/8ecdce70-ecda-454b-87fb-6532e28e8a51) If I remove the animation, I dont get it to crash
Philipp Oeser changed title from Crash: Code marked as unreachable has been executed. to Mesh Boolean node crash when operation is keyframed 2024-02-07 15:24:14 +01:00
Member

Will raise the priority here since this is a crasher (that is not totally uncommon to run into)

Will raise the priority here since this is a crasher (that is not totally uncommon to run into)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-02-13 16:04:19 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-07 17:44:54 +01:00
Sybren A. Stüvel added the
Interest
Animation & Rigging
label 2024-03-07 17:45:19 +01:00
Member

This is an interesting issue! An important one too. The problem is that the boolean operation changes which sockets are available, and the availability is used during evaluation to change which values are computed. Normally the availability changes are followed by rna_NodeSocket_update. For various reasons though, the animation system cannot call RNA property's update functions. This leaves two options:

  1. Disable animation for every node property that can affect socket visibility
  2. Move the update tags the the RNA property "set" functions. Then, before evaluating the node group, the relevant updates to availability, etc. would run.
    -- These updates before evaluation couldn't deal with properties that cause changes in the node group interface and potential dependencies between node groups. That's one important limitation.
    -- Since the RNA "set" functions are called from multiple threads, the update tagging would have to be made atomic.

Of those, I think option 1 is much safer and better for the long term sanity of this area. But I'm worried about how many people might be depending on animation of these node properties right now.

This is an interesting issue! An important one too. The problem is that the boolean operation changes which sockets are available, and the availability is used during evaluation to change which values are computed. Normally the availability changes are followed by `rna_NodeSocket_update`. For various reasons though, the animation system cannot call RNA property's update functions. This leaves two options: 1. Disable animation for every node property that can affect socket visibility 2. Move the update tags the the RNA property "set" functions. Then, before evaluating the node group, the relevant updates to availability, etc. would run. -- These updates before evaluation couldn't deal with properties that cause changes in the node group interface and potential dependencies between node groups. That's one important limitation. -- Since the RNA "set" functions are called from multiple threads, the update tagging would have to be made atomic. Of those, I think option 1 is much safer and better for the long term sanity of this area. But I'm worried about how many people might be depending on animation of these node properties right now.
Hans Goudey was assigned by Jacques Lucke 2024-03-08 17:58:41 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-11 19:27:13 +01:00
Author
Contributor

Thank you, Hans! <3

Thank you, Hans! <3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110562
No description provided.