source/blender/nodes/function/nodes/node_fn_align_euler_to_vector.cc
@@ -241,14 +241,20 @@ static void node_rna(StructRNA *srna)
                     "Axis",
                     "Axis to align to the vector",
                     axis_items,
-                    NOD_inline_enum_accessors(custom1));
+                    NOD_inline_enum_accessors(custom1),
+                    std::nullopt,
+                    nullptr,
+                    true);
 
   RNA_def_node_enum(srna,
                     "pivot_axis",
                     "Pivot Axis",
                     "Axis to rotate around",
                     pivot_axis_items,
-                    NOD_inline_enum_accessors(custom2));
+                    NOD_inline_enum_accessors(custom2),
+                    std::nullopt,
+                    nullptr,
+                    true);
 }
 
 static void node_register()
